fix sponsor column layout issue in firefox.

--- a/css/include/layout.styl
+++ b/css/include/layout.styl
@@ -89,5 +89,5 @@ section
 
 .sponsor-box
   display inline-block
-  width 330px
+  width 32%
   vertical-align top
